chore: update models in help and screenshots (#40)

--- a/src/main/resources/io/jenkins/plugins/explain_error/GlobalConfigurationImpl/help-model.html
+++ b/src/main/resources/io/jenkins/plugins/explain_error/GlobalConfigurationImpl/help-model.html
@@ -4,19 +4,19 @@ The AI model to use for error explanation.
 <ul>
 <li><strong>OpenAI</strong>: 
   <ul>
-    <li>gpt-5-nano (default, cost-effective)</li>
+    <li>gpt-4, gpt-4-turbo, gpt-3.5-turbo, etc.</li>
     <li>More advanced models available https://platform.openai.com/docs/models/</li>
   </ul>
 </li>
 <li><strong>Google Gemini</strong>:
   <ul>
-    <li>gemini-2.0-flash (default, fast and efficient)</li>
+    <li>gemini-2.0-flash, gemini-2.0-flash-lite, gemini-2.5-flash, etc.</li>
     <li>More advanced models available https://ai.google.dev/gemini-api/docs/models</li>
   </ul>
 </li>
 <li><strong>Ollama</strong>:
   <ul>
-    <li>gemma3:1b (default, fast and efficient)</li>
+    <li>gemma3:1b, gpt-oss, deepseek-r1, etc. any model available in your Ollama instance</li>
     <li>More advanced models available https://ollama.com/search</li>
   </ul>
 </li>
