--- a/src/main/resources/io/jenkins/plugins/explain_error/GlobalConfigurationImpl/help-provider.html
+++ b/src/main/resources/io/jenkins/plugins/explain_error/GlobalConfigurationImpl/help-provider.html
@@ -1,7 +1,7 @@
 Choose the AI provider you want to use for error explanation:
 <ul>
-<li><strong>OpenAI</strong>: Uses OpenAI's GPT models (GPT-5-nano, etc.)</li>
-<li><strong>Google Gemini</strong>: Uses Google's Gemini models (gemini-2.0-flash, gemini-2.0-pro, etc.)</li>
-<li><strong>Ollama</strong>: Uses Ollama's local or remote models (gemma3:1b, etc.)</li>
+<li><strong>OpenAI</strong>: Uses OpenAI's GPT models (gpt-4, gpt-4-turbo, gpt-3.5-turbo, etc.)</li>
+<li><strong>Google Gemini</strong>: Uses Google's Gemini models (gemini-2.0-flash, gemini-2.0-flash-lite, gemini-2.5-flash, etc.)</li>
+<li><strong>Ollama</strong>: Uses any model available in your Ollama instance (gemma3:1b, gpt-oss, deepseek-r1, etc.)</li>
 </ul>
 <p>Select the provider that best fits your needs based on factors like cost, performance, and data privacy.</p>
